created node Json Token Velidation base

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "devStartAuth": "nodemon authServer.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
